@@ -68,7 +68,9 @@
                 return self.Behavior;
             }
 
-            throw new InvalidOperationException(string.Format("Does not understand {0}", msgname));
+            return DotNetObject.SendMessage(this.Machine, self, msgname, args);
+
+            //throw new InvalidOperationException(string.Format("Does not understand {0}", msgname));
         }
     }
 }
