@@ -18,6 +18,7 @@
 - Initial class library
 - Bootstrap
 - Review time1 > time2 in transaction management
+- Parse #(1 2 3)
 
 - Resolve height instead seft height
 	in native objects and IObject (.CompileSet I guess in Block)
